<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pao123.contrl.menu.RunningActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3" >

                <ImageView
                    android:id="@+id/img_heatbeat1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/str_running_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="60sp"
                    android:text="@string/init_time" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="8"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/img_heatbeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/star_on" />

                <TextView
                    android:id="@+id/str_heartbeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heartbeat"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/str_heartbeat_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heartbeat_is_null"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/img_gps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/star_on" />

                <TextView
                    android:id="@+id/str_gps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gps"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/gps_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gps_is_great"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/paused_btn_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:orientation="vertical" >


            
            
            <com.pao123.contrl.startrun.ui.CircleProgressView
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                app:bgColor="#FFFF00"
                app:progressColor="#F06522"
                app:radius="95dip"
                app:strokeWidth="6dip" />
            <Button
                android:id="@+id/btn_long_press_to_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/running_circle_btn"
                android:text="@string/long_press_to_pause"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>